feat: 使用 DSL 语法写入 XML 文件