@@ -1,6 +1,7 @@
 package moe.peanutmelonseedbigalmond.bilirec.recording.writer
 
 import com.sun.xml.txw2.output.IndentingXMLStreamWriter
+import moe.peanutmelonseedbigalmond.bilirec.dsl.xml.writeXmlElement
 import moe.peanutmelonseedbigalmond.bilirec.network.danmaku.data.DanmakuModel
 import moe.peanutmelonseedbigalmond.bilirec.network.danmaku.enum.DanmakuCommand
 import moe.peanutmelonseedbigalmond.bilirec.recording.Room
@@ -24,7 +25,9 @@ class DanmakuWriter(
     private var writeCount = 0
 
     init {
-        writer = IndentingXMLStreamWriter(XMLOutputFactory.newInstance().createXMLStreamWriter(outputStream, Charsets.UTF_8.name()))
+        writer = IndentingXMLStreamWriter(
+            XMLOutputFactory.newInstance().createXMLStreamWriter(outputStream, Charsets.UTF_8.name())
+        )
         writer.writeStartDocument()
         writer.writeProcessingInstruction("xml-stylesheet", """type="text/xsl" href="#s"""")
         /******<i>******/
@@ -32,46 +35,48 @@ class DanmakuWriter(
             "本文件的弹幕信息兼容B站主站视频弹幕XML格式\n本XML自带样式可以在浏览器里打开（推荐使用Chrome）\n\nsc为SuperChat\ngift为礼物\nguard为上船\n\nattribute \"raw\" 为原始数据"
         )
         writer.writeStartElement("i")
-        writer.writeElementString("chatserver", "chat.bilibili.com")
-        writer.writeElementString("chatid", "0")
-        writer.writeElementString("mission", "0")
-        writer.writeElementString("maxlimit", "1000")
-        writer.writeElementString("state", "0")
-        writer.writeElementString("real_name", "0")
-        writer.writeElementString("source", "0")
-
+        writer.writeXmlElement("chatserver") {
+            text("chat.bilibili.com")
+        }
+        writer.writeXmlElement("chatid") {
+            text("0")
+        }
+        writer.writeXmlElement("mission") {
+            text("0")
+        }
+        writer.writeXmlElement("maxlimit") {
+            text("1000")
+        }
+        writer.writeXmlElement("state") {
+            text("0")
+        }
+        writer.writeXmlElement("real_name") {
+            text("0")
+        }
+        writer.writeXmlElement("source") {
+            text("0")
+        }
         /******<BiliRec>******/
-        writer.writeStartElement("BiliRec")
-        writer.writeAttribute("version", "0.1")
-        writer.writeEndElement()
+        writer.writeXmlElement("BiliRec") {
+            attribute("version", "0.1")
+        }
         /******</BiliRec>******/
 
         /******<BiliRecInfo>******/
-        writer.writeStartElement("BiliRecInfo")
-        writer.writeAttribute("roomid", room.roomConfig.roomId.toString())
-        writer.writeAttribute("shortid", room.shortId.toString())
-        writer.writeAttribute("name", removeInvalidXmlChars(room.userName))
-        writer.writeAttribute("title", removeInvalidXmlChars(room.title))
-        writer.writeAttribute("areanameparent", removeInvalidXmlChars(room.parentAreaName))
-        writer.writeAttribute("areanamechild", removeInvalidXmlChars(room.childAreaName))
-        writer.writeAttribute("start_time", startTime.toString())
-        writer.writeEndElement()
+        writer.writeXmlElement("BiliRecInfo") {
+            attribute("roomid", room.roomConfig.roomId.toString())
+            attribute("shortid", room.shortId.toString())
+            attribute("name", removeInvalidXmlChars(room.userName))
+            attribute("title", removeInvalidXmlChars(room.title))
+            attribute("areanameparent", removeInvalidXmlChars(room.parentAreaName))
+            attribute("areanamechild", removeInvalidXmlChars(room.childAreaName))
+            attribute("start_time", startTime.toString())
+        }
         /******</BiliRecInfo>******/
 
         /******<BiliRecXmlStyle>******/
-        writer.writeStartElement("BiliRecXmlStyle")
-        val style =
-            """<z:stylesheet version="1.0" id="s" xml:id="s" xmlns:z="http://www.w3.org/1999/XSL/Transform"><z:output method="html"/><z:template match="/"><html><meta name="viewport" content="width=device-width"/><title>B站录播姬弹幕文件 - <z:value-of select="/i/BiliRecInfo/@name"/></title><style>body{margin:0}h1,h2,p,table{margin-left:5px}table{border-spacing:0}td,th{border:1px solid grey;padding:1px}th{position:sticky;top:0;background:#4098de}tr:hover{background:#d9f4ff}div{overflow:auto;max-height:80vh;max-width:100vw;width:fit-content}</style><h1>B站录播姬弹幕XML文件</h1><p>本文件的弹幕信息兼容B站主站视频弹幕XML格式，可以使用现有的转换工具把文件中的弹幕转为ass字幕文件</p><table><tr><td>录播姬版本</td><td><z:value-of select="/i/BiliRec/@version"/></td></tr><tr><td>房间号</td><td><z:value-of select="/i/BiliRecInfo/@roomid"/></td></tr><tr><td>主播名</td><td><z:value-of select="/i/BiliRecInfo/@name"/></td></tr><tr><td>录制开始时间</td><td><z:value-of select="/i/BiliRecInfo/@start_time"/></td></tr><tr><td><a href="#d">弹幕</a></td><td>共 <z:value-of select="count(/i/d)"/> 条记录</td></tr><tr><td><a href="#guard">上船</a></td><td>共 <z:value-of select="count(/i/guard)"/> 条记录</td></tr><tr><td><a href="#sc">SC</a></td><td>共 <z:value-of select="count(/i/sc)"/> 条记录</td></tr><tr><td><a href="#gift">礼物</a></td><td>共 <z:value-of select="count(/i/gift)"/> 条记录</td></tr></table><h2 id="d">弹幕</h2><div><table><tr><th>用户名</th><th>弹幕</th><th>参数</th></tr><z:for-each select="/i/d"><tr><td><z:value-of select="@user"/></td><td><z:value-of select="."/></td><td><z:value-of select="@p"/></td></tr></z:for-each></table></div><h2 id="guard">舰长购买</h2><div><table><tr><th>用户名</th><th>舰长等级</th><th>购买数量</th><th>出现时间</th></tr><z:for-each select="/i/guard"><tr><td><z:value-of select="@user"/></td><td><z:value-of select="@level"/></td><td><z:value-of select="@count"/></td><td><z:value-of select="@ts"/></td></tr></z:for-each></table></div><h2 id="sc">SuperChat 醒目留言</h2><div><table><tr><th>用户名</th><th>内容</th><th>显示时长</th><th>价格</th><th>出现时间</th></tr><z:for-each select="/i/sc"><tr><td><z:value-of select="@user"/></td><td><z:value-of select="."/></td><td><z:value-of select="@time"/></td><td><z:value-of select="@price"/></td><td><z:value-of select="@ts"/></td></tr></z:for-each></table></div><h2 id="gift">礼物</h2><div><table><tr><th>用户名</th><th>礼物名</th><th>礼物数量</th><th>出现时间</th></tr><z:for-each select="/i/gift"><tr><td><z:value-of select="@user"/></td><td><z:value-of select="@giftname"/></td><td><z:value-of select="@giftcount"/></td><td><z:value-of select="@ts"/></td></tr></z:for-each></table></div></html></z:template></z:stylesheet>"""
-        writer.writeRaw(style)
-        writer.writeEndElement()
-        writer.flush()
+        writeStyleSheet()
         /******</BiliRecXmlStyle>******/
-    }
-
-    private fun XMLStreamWriter.writeElementString(tagName: String, text: String = "") {
-        this.writeStartElement(tagName)
-        this.writeCharacters(text)
-        this.writeEndElement()
     }
 
     @Synchronized
@@ -86,26 +91,20 @@ class DanmakuWriter(
         val timestamp =
             (Duration.between(startTime.toLocalDateTime(), OffsetDateTime.now().toLocalDateTime())
                 .toMillis() / 1000.0).coerceAtLeast(0.0)
-        this.writer.writeStartElement("d")
-        this.writer.writeAttribute(
-            "p",
-            "${
-                String.format(
-                    "%.3f",
-                    timestamp
-                )
-            },$danmakuType,$danmakuSize,$danmakuColor,$sendTime,0,${danmakuModel.userId},0"
-        )
-        this.writer.writeAttribute("user", removeInvalidXmlChars(danmakuModel.username))
-
-        if (room.roomConfig.recordRawDanmakuData) {
-            this.writer.writeAttribute(
-                "raw",
-                danmakuModel.rawObject?.get("info")?.toString() ?: ""
+        this.writer.writeXmlElement("d") {
+            attribute(
+                "p",
+                "${String.format("%.3f", timestamp)}," +
+                        "$danmakuType,$danmakuSize,$danmakuColor,$sendTime,0,${danmakuModel.userId},0"
             )
+            attribute("user", removeInvalidXmlChars(danmakuModel.username))
+
+            if (room.roomConfig.recordRawDanmakuData) {
+                attribute("raw", danmakuModel.rawObject?.get("info")?.toString() ?: "")
+            }
+
+            text(removeInvalidXmlChars(danmakuModel.commentText ?: ""))
         }
-        this.writer.writeCharacters(removeInvalidXmlChars(danmakuModel.commentText ?: ""))
-        this.writer.writeEndElement()
         applyFlush()
     }
 
@@ -115,25 +114,21 @@ class DanmakuWriter(
         if (danmakuModel.command != DanmakuCommand.SUPER_CHAT) return
         if (room.roomConfig.recordSuperChatData) {
             val timestamp =
-                (Duration.between(
-                    startTime.toLocalDateTime(),
-                    OffsetDateTime.now().toLocalDateTime()
-                )
-                    .toMillis() / 1000.0).coerceAtLeast(0.0)
-            this.writer.writeStartElement("sc")
-            this.writer.writeAttribute("ts", String.format("%.3f", timestamp))
-            this.writer.writeAttribute("user", removeInvalidXmlChars(danmakuModel.username))
-            this.writer.writeAttribute("price", danmakuModel.price.toString())
-            this.writer.writeAttribute("time", danmakuModel.superChatKeepTime.toString())
+                (Duration.between(startTime.toLocalDateTime(), OffsetDateTime.now().toLocalDateTime())
+                    .toMillis() / 1000.0)
+                    .coerceAtLeast(0.0)
+            this.writer.writeXmlElement("sc") {
+                attribute("ts", String.format("%.3f", timestamp))
+                attribute("user", removeInvalidXmlChars(danmakuModel.username))
+                attribute("price", danmakuModel.price.toString())
+                attribute("time", danmakuModel.superChatKeepTime.toString())
 
-            if (room.roomConfig.recordRawDanmakuData) {
-                this.writer.writeAttribute(
-                    "raw",
-                    danmakuModel.rawObject?.get("data")?.toString() ?: ""
-                )
+                if (room.roomConfig.recordRawDanmakuData) {
+                    attribute("raw", danmakuModel.rawObject?.get("data")?.toString() ?: "")
+                }
+
+                text(removeInvalidXmlChars(danmakuModel.commentText ?: ""))
             }
-            this.writer.writeCharacters(removeInvalidXmlChars(danmakuModel.commentText ?: ""))
-            this.writer.writeEndElement()
         }
         applyFlush()
     }
@@ -143,24 +138,20 @@ class DanmakuWriter(
         if (closed) return
         if (danmakuModel.command != DanmakuCommand.SEND_GIFT) return
         if (room.roomConfig.recordSendGiftData) {
-            this.writer.writeStartElement("gift")
             val timestamp =
-                (Duration.between(
-                    startTime.toLocalDateTime(),
-                    OffsetDateTime.now().toLocalDateTime()
-                )
-                    .toMillis() / 1000.0).coerceAtLeast(0.0)
-            this.writer.writeAttribute("ts", String.format("%.3f", timestamp))
-            this.writer.writeAttribute("user", removeInvalidXmlChars(danmakuModel.username))
-            this.writer.writeAttribute("giftname", removeInvalidXmlChars(danmakuModel.giftName))
-            this.writer.writeAttribute("giftcount", danmakuModel.giftCount.toString())
-            if (room.roomConfig.recordRawDanmakuData) {
-                this.writer.writeAttribute(
-                    "raw",
-                    danmakuModel.rawObject?.get("data")?.toString() ?: ""
-                )
+                (Duration.between(startTime.toLocalDateTime(), OffsetDateTime.now().toLocalDateTime())
+                    .toMillis() / 1000.0)
+                    .coerceAtLeast(0.0)
+            this.writer.writeXmlElement("gift") {
+                attribute("ts", String.format("%.3f", timestamp))
+                attribute("user", removeInvalidXmlChars(danmakuModel.username))
+                attribute("giftname", removeInvalidXmlChars(danmakuModel.giftName))
+                attribute("giftcount", danmakuModel.giftCount.toString())
+
+                if (room.roomConfig.recordRawDanmakuData) {
+                    attribute("raw", danmakuModel.rawObject?.get("data")?.toString() ?: "")
+                }
             }
-            this.writer.writeEndElement()
         }
         applyFlush()
     }
@@ -170,21 +161,19 @@ class DanmakuWriter(
         if (closed) return
         if (danmakuModel.command != DanmakuCommand.GUARD_BUY) return
         if (room.roomConfig.recordGuardByData) {
-            this.writer.writeStartElement("guard")
             val timestamp =
-                (Duration.between(
-                    startTime.toLocalDateTime(),
-                    OffsetDateTime.now().toLocalDateTime()
-                )
-                    .toMillis() / 1000.0).coerceAtLeast(0.0)
-            this.writer.writeAttribute("ts", String.format("%.3f", timestamp))
-            this.writer.writeAttribute("user", removeInvalidXmlChars(danmakuModel.username))
-            this.writer.writeAttribute("level", danmakuModel.userGuardLevel.toString())
-            this.writer.writeAttribute("count", danmakuModel.giftCount.toString())
-            if (room.roomConfig.recordRawDanmakuData) {
-                this.writer.writeAttribute("raw", danmakuModel.rawObject?.get("data")?.toString())
+                (Duration.between(startTime.toLocalDateTime(), OffsetDateTime.now().toLocalDateTime())
+                    .toMillis() / 1000.0)
+                    .coerceAtLeast(0.0)
+            this.writer.writeXmlElement("guard") {
+                attribute("ts", String.format("%.3f", timestamp))
+                attribute("user", removeInvalidXmlChars(danmakuModel.username))
+                attribute("level", danmakuModel.userGuardLevel.toString())
+                attribute("count", danmakuModel.giftCount.toString())
+                if (room.roomConfig.recordRawDanmakuData) {
+                    attribute("raw", danmakuModel.rawObject?.get("data")?.toString() ?: "")
+                }
             }
-            this.writer.writeEndElement()
         }
         applyFlush()
     }
@@ -197,16 +186,354 @@ class DanmakuWriter(
         }
     }
 
-    // 需要添加JVM参数 --add-opens java.xml/com.sun.xml.internal.stream.writers=ALL-UNNAMED
-    private fun XMLStreamWriter.writeRaw(text: String) {
-        if (this.javaClass.name == "com.sun.xml.internal.stream.writers.XMLStreamWriterImpl") {
-            val clazz = this.javaClass
-            val b1 = clazz.getDeclaredMethod("getEscapeCharacters").invoke(this) as Boolean
-            clazz.getDeclaredMethod("setEscapeCharacters", Boolean::class.java).invoke(this, false)
-            this.writeCharacters(text)
-            clazz.getDeclaredMethod("setEscapeCharacters", Boolean::class.java).invoke(this, b1)
-        } else {
-            this.writeCharacters(text)
+    private fun writeStyleSheet() {
+        writer.writeXmlElement("BiliRecXmlStyle") {
+            child("z:stylesheet") {
+
+                attribute("version", "1.0")
+                attribute("id", "s")
+                attribute("xml:id", "s")
+                attribute("xmlns:z", "http://www.w3.org/1999/XSL/Transform")
+
+                child("z:output") {
+                    attribute("method", "html")
+                }
+                child("z:template") {
+                    attribute("match", "/")
+
+                    child("html") {
+                        child("meta") {
+                            attribute("name", "viewport")
+                            attribute("content", "width=device-width")
+                        }
+                        child("title") {
+                            text("B站录播姬弹幕文件 -")
+                            child("z:value-of") {
+                                attribute("select", "/i/BiliRecInfo/@name")
+                            }
+                        }
+
+                        child("style") {
+                            text(
+                                "body{margin:0}h1,h2,p,table{margin-left:5px}table{border-spacing:0}td,th{border:1px solid\n" +
+                                        "grey;padding:1px}th{position:sticky;top:0;background:#4098de}tr:hover{background:#d9f4ff}div{overflow:auto;max-height:80vh;max-width:100vw;width:fit-content}"
+                            )
+                        }
+                        child("h1") {
+                            text("B站录播姬弹幕XML文件")
+                        }
+                        child("p") {
+                            text("本文件的弹幕信息兼容B站主站视频弹幕XML格式，可以使用现有的转换工具把文件中的弹幕转为ass字幕文件")
+                        }
+
+                        child("table") {
+                            child("tr") {
+                                child("td") {
+                                    text("录播姬版本")
+                                }
+                                child("td") {
+                                    child("z:value-of") {
+                                        attribute("select", "/i/BiliRec/@version")
+                                    }
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    text("房间号")
+                                }
+                                child("td") {
+                                    child("z:value-of") {
+                                        attribute("select", "/i/BiliRecInfo/@roomid")
+                                    }
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    text("主播名")
+                                }
+                                child("td") {
+                                    child("z:value-of") {
+                                        attribute("select", "/i/BiliRecInfo/@name")
+                                    }
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    text("录制开始时间")
+                                }
+                                child("td") {
+                                    child("z:value-of") {
+                                        attribute("select", "/i/BiliRecInfo/@start_time")
+                                    }
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    child("a") {
+                                        attribute("href", "#d")
+                                        text("弹幕")
+                                    }
+                                }
+                                child("td") {
+                                    text("共")
+                                    child("z:value-of") {
+                                        attribute("select", "count(/i/d)")
+                                    }
+                                    text(" 条记录")
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    child("a") {
+                                        attribute("href", "#guard")
+                                        text("上船")
+                                    }
+                                }
+                                child("td") {
+                                    text("共")
+                                    child("z:value-of") {
+                                        attribute("select", "count(/i/guard)")
+                                    }
+                                    text(" 条记录")
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    child("a") {
+                                        attribute("href", "#sc")
+                                        text("SC")
+                                    }
+                                }
+                                child("td") {
+                                    text("共")
+                                    child("z:value-of") {
+                                        attribute("select", "count(/i/sc)")
+                                    }
+                                    text(" 条记录")
+                                }
+                            }
+
+                            child("tr") {
+                                child("td") {
+                                    child("a") {
+                                        attribute("href", "#gift")
+                                        text("礼物")
+                                    }
+                                }
+                                child("td") {
+                                    text("共")
+                                    child("z:value-of") {
+                                        attribute("select", "count(/i/gift)")
+                                    }
+                                    text(" 条记录")
+                                }
+                            }
+                        }
+
+                        child("h2") {
+                            attribute("id", "d")
+                            text("弹幕")
+                        }
+                        child("div") {
+                            child("table") {
+                                child("tr") {
+                                    child("th") {
+                                        text("用户名")
+                                    }
+                                    child("th") {
+                                        text("弹幕")
+                                    }
+                                    child("th") {
+                                        text("参数")
+                                    }
+                                }
+
+                                child("z:for-each") {
+                                    attribute("select", "/i/d")
+                                    child("tr") {
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@user")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", ".")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@p")
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        child("h2") {
+                            attribute("id", "guard")
+                            text("舰长购买")
+                        }
+                        child("div") {
+                            child("table") {
+                                child("tr") {
+                                    child("th") {
+                                        text("用户名")
+                                    }
+                                    child("th") {
+                                        text("舰长等级")
+                                    }
+                                    child("th") {
+                                        text("购买数量")
+                                    }
+                                    child("th") {
+                                        text("出现时间")
+                                    }
+                                }
+
+                                child("z:for-each") {
+                                    attribute("select", "/i/guard")
+                                    child("tr") {
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@user")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@level")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@count")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@ts")
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        child("h2") {
+                            attribute("id", "sc")
+                            text("SuperChat 醒目留言")
+                        }
+                        child("div") {
+                            child("table") {
+                                child("tr") {
+                                    child("th") {
+                                        text("用户名")
+                                    }
+                                    child("th") {
+                                        text("内容")
+                                    }
+                                    child("th") {
+                                        text("显示时长")
+                                    }
+                                    child("th") {
+                                        text("价格")
+                                    }
+                                    child("th") {
+                                        text("出现时间")
+                                    }
+                                }
+
+                                child("z:for-each") {
+                                    attribute("select", "/i/sc")
+                                    child("tr") {
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@user")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", ".")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@time")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@price")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@ts")
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        child("h2") {
+                            attribute("id", "gift")
+                            text("礼物")
+                        }
+                        child("div") {
+                            child("table") {
+                                child("tr") {
+                                    child("th") {
+                                        text("用户名")
+                                    }
+                                    child("th") {
+                                        text("礼物名")
+                                    }
+                                    child("th") {
+                                        text("礼物数量")
+                                    }
+                                    child("th") {
+                                        text("出现时间")
+                                    }
+                                }
+
+                                child("z:for-each") {
+                                    attribute("select", "/i/gift")
+                                    child("tr") {
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@user")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@giftname")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@giftcount")
+                                            }
+                                        }
+                                        child("td") {
+                                            child("z:value-of") {
+                                                attribute("select", "@ts")
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 
